// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CardMedia can have a children 1`] = `
<section
  className="mdc-card__media"
>
  Children are here!
</section>
`;

exports[`components/CardMedia can have an image source 1`] = `
<img
  alt=""
  className="mdc-card__media-item mdc-card__media-item--1x"
  src="https://material-components-web.appspot.com/images/1-1.jpg"
  style={undefined}
/>
`;

exports[`components/CardMedia can have different size 1`] = `
<section
  className="mdc-card__media"
/>
`;

exports[`components/CardMedia can specify an alternate text for the source 1`] = `
<section
  className="mdc-card__media"
/>
`;
